--- a/F. Good Strings.ipynb
+++ b/F. Good Strings.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d25d329b",
+   "id": "7710c818",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122a823f",
+   "id": "aba83358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c93bbe09",
+   "id": "9310ba4c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2eac68f9",
+   "id": "bbe9f3b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f5961050",
+   "id": "1ec7eb77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1a041b5c",
+   "execution_count": 48,
+   "id": "b1cd949d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
     "    \n",
     "    def test_all(self, cases, f):\n",
     "        for i, case in enumerate(cases):\n",
-    "            print('case', i+1)\n",
+    "            print('case', i+1, end='\\t')\n",
     "            self.test(case, f)        \n",
     "    \n",
     "    def test(self, case, f):\n",
@@ -148,27 +148,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fac77f92",
+   "id": "bf3be451",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6b976288",
+   "execution_count": 49,
+   "id": "f47d50d3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "case 1\n",
-      "pass\n",
-      "case 2\n",
-      "pass\n",
-      "case 3\n",
-      "pass\n"
+      "case 1\tpass\n",
+      "case 2\tpass\n",
+      "case 3\tpass\n"
      ]
     }
    ],
@@ -179,17 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "bdfc3202",
+   "execution_count": 50,
+   "id": "f420fed1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\nрешим эту задачу без использования рекурсии. будем проходить по строке И сохранять то что прошли в строке gs.  и сравнивать его с пердыдущим. \\nЕсли окажется что они отличаются регистром, то создадим новую строку удалив из нее найденную пару и будем проверять для нее то же самое рекурсивно. \\nдля проверки будем использовать метод str.lower().\\n'"
+       "'\\nрешим эту задачу без использования рекурсии. будем проходить по строке И сохранять то что прошли в массиве символов gs. \\nБудем использовать именно массив, так как строковый тип в Python является неизменяемым, а нам понадобится делать изменение.\\nНачиная со второго элемента будем сравнивать его с пердыдущим. Если окажется что они отличаются регистром, \\nто удалим из gs последний элемент, а если нет, то добавим этот элемент в gs. Для проверки будем использовать метод str.lower(). \\nВ результате соберем из gs строку.\\n'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,8 +203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "7c31355c",
+   "execution_count": 51,
+   "id": "d8cb6927",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,20 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "35e71163",
+   "execution_count": 52,
+   "id": "edaf75fa",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "case 1\n",
-      "pass\n",
-      "case 2\n",
-      "pass\n",
-      "case 3\n",
-      "pass\n"
+      "case 1\tpass\n",
+      "case 2\tpass\n",
+      "case 3\tpass\n"
      ]
     }
    ],
@@ -255,7 +249,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d11e8f3",
+   "id": "3e7d9280",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74a4a31f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0027fbb7",
    "metadata": {},
    "outputs": [],
    "source": []
