add dels to G task to reduce memory consumption

--- a/Yandex.Contest.20/G. Paths in Tree.ipynb
+++ b/Yandex.Contest.20/G. Paths in Tree.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "'\\nДано укоренённое дерево на N вершинах и число X. В каждой вершине записано число — её вес. \\nНазовём восходящим путь ai,p(ai),p(p(ai)),..., где p(a) — родитель вершины a. \\nПроще говоря, восходящий путь — это путь, который начинается с некоторой вершины и двигается в сторону корня \\n(не обязательно доходя до него). Путь может состоять из одной вершины. Весом пути назовём суммарный вес вершин на этом пути.\\nНайдите количество восходящих путей с весом X. Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\\n\\nФормат ввода\\nВ первой строке дано число вершин n (1≤n≤2⋅10**5) и число X (−10**9≤X≤10**9).\\nВ следующих n строках по одной в строке заданы вершины. \\ni-я вершина задаётся двумя числами — pi и wi, записанными через пробел. \\npi — это либо номер вершины-родителя вершины i, в этом случае 0≤pi≤n−1, \\nлибо −1, если вершина i является корнем. \\nwi — это вес вершины i(−10**4≤wi≤10**4).\\n\\nФормат вывода\\nВыведите одно целое число — количество восходящих путей веса X.\\n\\nПример 1\\nВводВ\\n6 3\\n-1 1\\n0 1\\n0 1\\n1 1\\n2 2\\n3 1\\nВывод\\n3\\nПример 2\\nВвод\\n1 2\\n-1 1\\nВывод\\n0\\n'"
+       "'\\nДано укоренённое дерево на N вершинах и число X. В каждой вершине записано число — её вес. \\nНазовём восходящим путь ai,p(ai),p(p(ai)),..., где p(a) — родитель вершины a. \\nПроще говоря, восходящий путь — это путь, который начинается с некоторой вершины и двигается в сторону корня \\n(не обязательно доходя до него). Путь может состоять из одной вершины. Весом пути назовём суммарный вес вершин на этом пути.\\nНайдите количество восходящих путей с весом X. Вы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\\n\\nФормат ввода\\nВ первой строке дано число вершин n (1≤n≤2⋅10**5) и число X (−10**9≤X≤10**9).\\nВ следующих n строках по одной в строке заданы вершины. \\ni-я вершина задаётся двумя числами — pi и wi, записанными через пробел. \\npi — это либо номер вершины-родителя вершины i, в этом случае 0≤pi≤n−1, \\nлибо −1, если вершина i является корнем. \\nwi — это вес вершины i(−10**4≤wi≤10**4).\\n\\nФормат вывода\\nВыведите одно целое число — количество восходящих путей веса X.\\n\\nПример 1\\nВвод\\n6 3\\n-1 1\\n0 1\\n0 1\\n1 1\\n2 2\\n3 1\\nВывод\\n3\\n\\nПример 2\\nВвод\\n1 2\\n-1 1\\nВывод\\n0\\n'"
       ]
      },
      "execution_count": 1,
@@ -37,7 +37,7 @@
     "Выведите одно целое число — количество восходящих путей веса X.\n",
     "\n",
     "Пример 1\n",
-    "ВводВ\n",
+    "Ввод\n",
     "6 3\n",
     "-1 1\n",
     "0 1\n",
@@ -47,6 +47,7 @@
     "3 1\n",
     "Вывод\n",
     "3\n",
+    "\n",
     "Пример 2\n",
     "Ввод\n",
     "1 2\n",
@@ -212,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "{'inp': {'x': 3, 'root': <__main__.Node at 0x2100b90cca0>}, 'outp': '3'}"
+       "{'inp': {'x': 3, 'root': <__main__.Node at 0x1bbde25ffd0>}, 'outp': '3'}"
       ]
      },
      "execution_count": 6,
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "ddde3c90",
    "metadata": {},
    "outputs": [],
@@ -412,8 +413,7 @@
     "    \n",
     "    while True:\n",
     "        next_level_nodes = []\n",
-    "        for node in level_nodes:\n",
-    "            \n",
+    "        for node in level_nodes:            \n",
     "            for child in node.children:\n",
     "                child.paths_weights.append(child.weight)\n",
     "                for pw in node.paths_weights:\n",
@@ -427,7 +427,11 @@
     "        \n",
     "        if len(next_level_nodes) == 0:\n",
     "            break\n",
-    "        \n",
+    "\n",
+    "        for node in level_nodes:\n",
+    "            del node.paths_weights\n",
+    "            del node\n",
+    "            \n",
     "        level_nodes = next_level_nodes\n",
     "        \n",
     "    return npx"
@@ -435,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "0884320b",
    "metadata": {},
    "outputs": [
@@ -459,6 +463,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "013e698b-09fb-4b62-aaf8-648ff44e32e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fb8dfb2-cce5-423a-bba7-2c5089ad141c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -477,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
