i and j tasks completer

--- a/Yandex.Contest.20/H. Sizifus.ipynb
+++ b/Yandex.Contest.20/H. Sizifus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 109,
    "id": "47ba9839-409f-40c7-b0da-08d89cc1979a",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'\\nВ этой задаче вы будете перекладывать камни. Изначально есть n кучек камней. Кучка i весит a[i] килограммов. Кучки можно объединять. \\nПри объединении кучек i и j затрачивается a[i]+a[j] единиц энергии, при этом две исходные кучки пропадают и появляется кучка весом a[i]+a[j]. \\nОпределите наименьшее количество энергии, которое надо затратить для объединения всех кучек в одну.\\nВы можете воспользоваться заготовками кода для данной задачи из репозитория курса.\\n\\nФормат ввода\\nВ первой строке дано число n (1≤n≤10**5)\\nВ следующей строке записаны массы кучек через пробел — a[i] (1≤a[i]≤10**6)\\n\\nФормат вывода\\nВыведите единственное число — минимальную энергию, которую надо затратить на объединение всех кучек.\\n\\nПример 1\\nВвод\\n2\\n2 6\\nВывод\\n8\\n\\nПример 2\\nВвод\\n3\\n6 2 4\\nВывод\\n18\\n'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 110,
    "id": "86356662-95bb-4d3e-983e-2550bbf158e5",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 111,
    "id": "d1bc2910-fe2e-427e-81fd-f3a8bbafec27",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 112,
    "id": "8feb3ad4-ca3b-4ee9-bb97-888b79babe4b",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "{'input': [2, 6], 'output': 8}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 113,
    "id": "02cc1080-b300-4d75-b894-9bec1b6bbe7d",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "{'input': [6, 2, 4], 'output': 18}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,10 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "4c349afe-d956-4111-bcfe-280660d895ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nЧтобы получить наименьшую энергию нужно объединять наименьшие по весу камни, так как чем раньше объединены камни, \\nтем большее количество раз их вес войдет в общую энергию. На каждой итерации будем искать пары с минимальными весами. Объединение дописывать в конец,\\nа в доп массив записывать использованные индексы. И конечно обновлять счетчик энергии.\\n'"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Чтобы получить наименьшую энергию нужно объединять наименьшие по весу камни, так как чем раньше объединены камни, \n",
@@ -142,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 115,
    "id": "b100bda6-c820-46b6-8457-29c78059960f",
    "metadata": {},
    "outputs": [],
@@ -180,10 +191,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "3b0ffb4a-2869-4e62-bedc-b94c5333aa42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input': [2, 6], 'output': 8}\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "case = parse_case(cases[0])\n",
     "print(case)\n",
@@ -192,10 +212,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "id": "35bd39f2-e293-4ff8-b83b-f3729ccc0706",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'input': [6, 2, 4], 'output': 18}\n",
+      "18\n"
+     ]
+    }
+   ],
    "source": [
     "case = parse_case(cases[1])\n",
     "print(case)\n",
@@ -204,10 +233,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "id": "b0c9bdb5-7dda-40f0-b8f5-31ea7d1fc475",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nЕще один cпособ решения - это отсортировать массив, а новые кучки вставлять в нужное место, чтобы он оставался отсортированным.\\n'"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Еще один cпособ решения - это отсортировать массив, а новые кучки вставлять в нужное место, чтобы он оставался отсортированным.\n",
@@ -224,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 119,
    "id": "2967e970-d20a-470f-a262-8bd036bf8102",
    "metadata": {},
    "outputs": [],
@@ -255,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 120,
    "id": "cb3f2c27-d5d7-4e87-acc2-983561314790",
    "metadata": {},
    "outputs": [
@@ -276,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 121,
    "id": "f97f60c4-e546-40cc-abb8-2aae4255f480",
    "metadata": {},
    "outputs": [
@@ -298,52 +338,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "099a3c23-a951-4828-9a82-0c5fa1caaada",
+   "id": "94f84def-1c5c-4ba6-b5a7-4f107f834044",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Еще один cпособ решения - это отсортировать массив, а новые кучки вставлять в нужное место, чтобы он оставался отсортированным.\n",
-    "\"\"\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b2ef7fb-8d88-4525-b7cf-c8b89d3f9140",
+   "id": "ca4779f0-6086-442a-adca-35f6748b3834",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_energy_for_union(stones):\n",
-    "    a = stones\n",
-    "    \n",
-    "    a.sort()\n",
-    "    n = len(a)\n",
-    "    if n == 1:\n",
-    "        return 0\n",
-    "        \n",
-    "    energy = (n - 1)*(a[0] + a[1])\n",
-    "            \n",
-    "    for i in range(2, ):\n",
-    "        union = a[step*2] + a[step*2 + 1]\n",
-    "\n",
-    "        if a[-1] <= union:\n",
-    "            a.append(union)\n",
-    "        else:        \n",
-    "            for i in range(step*2 + 2, len(a)):\n",
-    "                if union <= a[i]:\n",
-    "                    a.insert(i, union)\n",
-    "                    break\n",
-    "                \n",
-    "        energy += union\n",
-    "                \n",
-    "    return energy"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff633c46-ae16-46c4-b17a-114518d3ef0a",
+   "id": "76d14616-3068-484c-a8ea-19341598d983",
    "metadata": {},
    "outputs": [],
    "source": []
